--- a/index.html
+++ b/index.html
@@ -3,197 +3,59 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Jeu Mission Locale</title>
-
+<title>Test démarrage jeu</title>
 <style>
 body{
   margin:0;
-  font-family:Arial, sans-serif;
-  background:#f7fcfd;
+  font-family:Arial;
+  background:#eef;
   display:flex;
   justify-content:center;
   align-items:center;
-  min-height:100vh;
+  height:100vh;
 }
-
-#startScreen{
-  position:fixed;
-  inset:0;
-  background:#f7fcfd;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  z-index:10;
-}
-
-.startBox{
-  background:white;
-  padding:24px;
-  border-radius:16px;
-  box-shadow:0 10px 30px rgba(0,0,0,.2);
-  text-align:center;
-  max-width:400px;
-}
-
-.startBox h1{
-  color:#0f7780;
-}
-
-.startBox button{
-  margin-top:16px;
-  padding:12px 20px;
+#start{
+  padding:20px 30px;
+  font-size:20px;
   border:none;
   border-radius:10px;
   background:#0f7780;
   color:white;
-  font-size:16px;
-  cursor:pointer;
 }
-
 canvas{
-  background:linear-gradient(#eaf7f8,#fff);
-  border-radius:12px;
+  display:none;
+  background:white;
+  border:2px solid black;
 }
 </style>
 </head>
 
 <body>
 
-<div id="startScreen">
-  <div class="startBox">
-    <h1>🎯 Jeu Mission Locale</h1>
-    <p>
-      Saute pour éviter les obstacles.<br>
-      Barre espace ou toucher l’écran.
-    </p>
-    <button id="startBtn">Démarrer</button>
-  </div>
-</div>
-
-<canvas id="game" width="900" height="260"></canvas>
+<button id="start">DÉMARRER</button>
+<canvas id="game" width="400" height="200"></canvas>
 
 <script>
+const btn = document.getElementById("start");
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-let gameRunning = false;
-let speed = 4;
-let obstacles = [];
-
-const player = {
-  x:80,
-  y:180,
-  r:22,
-  vy:0,
-  jumping:false
+btn.onclick = () => {
+  btn.style.display = "none";
+  canvas.style.display = "block";
+  loop();
 };
 
-// ===== FOND =====
-function drawBackground(){
-  ctx.globalAlpha=0.08;
-  ctx.fillStyle="#0f7780";
-  ctx.font="20px Arial";
-  ["CV","Entretien","Mission Locale","Compétences"].forEach((w,i)=>{
-    ctx.fillText(w,(i*200 + Date.now()/30)%1000-100,50+i*30);
-  });
-  ctx.globalAlpha=1;
+let x = 10;
+
+function loop(){
+  ctx.clearRect(0,0,400,200);
+  ctx.fillStyle = "red";
+  ctx.fillRect(x,80,30,30);
+  x += 2;
+  requestAnimationFrame(loop);
 }
-
-// ===== JOUEUR ROND MLE =====
-function drawPlayer(){
-  const grad = ctx.createLinearGradient(
-    player.x, player.y-player.r,
-    player.x, player.y+player.r
-  );
-  grad.addColorStop(0,"#f59e0b");
-  grad.addColorStop(1,"#ffffff");
-
-  ctx.fillStyle = grad;
-  ctx.beginPath();
-  ctx.arc(player.x, player.y, player.r, 0, Math.PI*2);
-  ctx.fill();
-
-  ctx.strokeStyle="#0f7780";
-  ctx.lineWidth=4;
-  ctx.stroke();
-
-  ctx.fillStyle="#0f7780";
-  ctx.font="bold 14px Arial";
-  ctx.textAlign="center";
-  ctx.textBaseline="middle";
-  ctx.fillText("MLE",player.x,player.y);
-}
-
-// ===== OBSTACLES =====
-function spawnObstacle(){
-  obstacles.push({
-    x:canvas.width,
-    y:190,
-    w:30,
-    h:30
-  });
-}
-
-// ===== SAUT =====
-function jump(){
-  if(!player.jumping){
-    player.jumping=true;
-    player.vy=-16;
-  }
-}
-
-// ===== BOUCLE JEU =====
-function gameLoop(){
-  if(!gameRunning) return;
-
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  drawBackground();
-
-  ctx.fillStyle="#e6f7f7";
-  ctx.fillRect(0,200,canvas.width,60);
-
-  if(player.jumping){
-    player.vy += 0.9;
-    player.y += player.vy;
-    if(player.y >= 180){
-      player.y = 180;
-      player.jumping = false;
-      player.vy = 0;
-    }
-  }
-
-  drawPlayer();
-
-  if(Math.random() < 0.02){
-    spawnObstacle();
-  }
-
-  obstacles.forEach(o=>{
-    o.x -= speed;
-    ctx.fillStyle="#8b3eff";
-    ctx.fillRect(o.x,o.y,o.w,o.h);
-  });
-
-  obstacles = obstacles.filter(o => o.x + o.w > 0);
-
-  requestAnimationFrame(gameLoop);
-}
-
-// ===== CONTROLES =====
-document.addEventListener("keydown",e=>{
-  if(e.code==="Space") jump();
-});
-canvas.addEventListener("click",jump);
-canvas.addEventListener("touchstart",jump);
-
-// ===== DÉMARRAGE =====
-document.getElementById("startBtn").onclick = () => {
-  document.getElementById("startScreen").style.display="none";
-  gameRunning = true;
-  gameLoop();
-};
 </script>
 
 </body>
 </html>
-
